--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,8 +1,5 @@
 [build-system]
-requires = [
-    "setuptools",
-    "setuptools-scm"
-]
+requires = ["setuptools"]
 
 [tool.setuptools]
 packages = ["broker"]
