--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,10 +2,10 @@
 requires = ["setuptools"]
 
 [tool.setuptools]
-packages = ["broker"]
+packages = ["core_utils"]
 
 [project]
-name = "Broker"
+name = "core_utils"
 authors = [
     {name = "Nathan Maxwell"}
 ]
@@ -24,5 +24,5 @@ dependencies = [
 version = "0.1.0"
 
 [project.urls]
-Homepage = "https://github.com/nate-maxwell/broker"
-Source = "https://github.com/nate-maxwell/broker"
+Homepage = "https://github.com/nate-maxwell/core_utils"
+Source = "https://github.com/nate-maxwell/core_utils"
