--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,3 +26,10 @@ version = "0.6.0"
 [project.urls]
 Homepage = "https://github.com/nate-maxwell/core_utils"
 Source = "https://github.com/nate-maxwell/core_utils"
+
+[tool.pytest.ini_options]
+testpaths = ["tests"]
+pythonpath = ["."]
+python_files = ["test_*.py"]
+python_classes = ["Test*"]
+python_functions = ["test_*"]
